syntax = "proto3";

option go_package = "github.com/bqxtt/book_online/rent/pkg/sdk/rentpb";

import "include/google/protobuf/timestamp.proto";
import "include/bookpb/book.proto";

package sdk;

message RentRecord {
  int64 id = 1;
  int64 user_id = 2;
  Book book = 3;
  google.protobuf.Timestamp borrowed_at = 4;
  google.protobuf.Timestamp returned_at = 5;
  google.protobuf.Timestamp deadline = 6;
}
