syntax = "proto3";

option go_package = "github.com/bqxtt/book_online/rent/pkg/sdk/rentpb";

import "rentpb/rent.proto";
import "base/request_response.proto";
import "include/google/protobuf/timestamp.proto";

package sdk;

service RentService {
  rpc BorrowBook(BorrowBookRequest) returns (BorrowBookReply) {};
  rpc ReturnBook(ReturnBookRequest) returns (ReturnBookReply) {};
  rpc ListBorrowedBook(ListBorrowedBookRequest) returns (ListBorrowedBookReply) {};
  rpc ListReturnedBook(ListReturnedBookRequest) returns (ListReturnedBookReply) {};
  rpc ListAllBorrowedBook(ListAllBorrowedBookRequest) returns (ListAllBorrowedBookReply) {};
  rpc ListAllReturnedBook(ListAllReturnedBookRequest) returns (ListAllReturnedBookReply) {};
  rpc ListAllBookRecords(ListAllBookRecordsRequest) returns (ListAllBookRecordsReply) {};
}

message BorrowBookRequest {
  int64 user_id = 1;
  int64 book_id = 2;
}

message BorrowBookReply {
  base.BaseReply reply = 1;
  google.protobuf.Timestamp deadline = 2;
}

message ReturnBookRequest {
  int64 record_id = 1;
}

message ReturnBookReply {
  base.BaseReply reply = 1;
}

message ListBorrowedBookRequest {
  int64 user_id = 1;
  base.Page page = 2;
}

message ListBorrowedBookReply {
  base.BaseReply reply = 1;
  repeated RentRecord records = 2;
}

message ListReturnedBookRequest {
  int64 user_id = 1;
  base.Page page = 2;
}

message ListReturnedBookReply {
  base.BaseReply reply = 1;
  repeated RentRecord records = 2;
}

message ListAllBorrowedBookRequest {
  base.Page page = 1;
}

message ListAllBorrowedBookReply {
  base.BaseReply reply = 1;
  repeated RentRecord records = 2;
}

message ListAllReturnedBookRequest {
  int64 user_id = 1;
  base.Page page = 2;
}

message ListAllReturnedBookReply {
  base.BaseReply reply = 1;
  repeated RentRecord records = 2;
}

message ListAllBookRecordsRequest {
  int64 user_id = 1;
  base.Page page = 2;
}

message ListAllBookRecordsReply {
  base.BaseReply reply = 1;
  repeated RentRecord records = 2;
}
